# bdrop-uploader

./: .gitignore  README.md
.github/workflows/: macos-build.yml
engine/: bdrop-encode  pyproject.toml
engine/bdrop_encode/: __init__.py  api.py  cli.py  config.py  encode.py  probe.py  upload.py
macos-app/: .gitignore  README.md  project.yml
macos-app/Resources/ffmpeg/: PLATZHALTER.md
macos-app/Sources/App/: AppConfig.swift  BDropUploader.entitlements  BDropUploaderApp.swift  Info.plist
macos-app/Sources/Models/: EncodeSettings.swift  FolderTree.swift  ItemStatus.swift  QueueItem.swift
macos-app/Sources/Services/: ApiClient.swift  EncodeService.swift  FFmpegLocator.swift  HLSLadderBuilder.swift  MultipartUploader.swift  NotificationService.swift  ProbeService.swift  ProcessRunner.swift  QueueStore.swift  R2Config.swift  R2Uploader.swift  TokenStore.swift  UploadService.swift
macos-app/Sources/Views/: ContentView.swift  DropZoneView.swift  FolderTreePicker.swift  ItemEditorView.swift  MenuBarContentView.swift  QueueListView.swift  SettingsView.swift
